# portscout

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/portscout/: __init__.py  __main__.py  bootstrap.py
src/portscout/application/: __init__.py  services.py
src/portscout/domain/: __init__.py  entities.py  ports.py  value_objects.py
src/portscout/infrastructure/: __init__.py  config.py  dependencies.py  nmap_adapter.py
src/portscout/presentation/: __init__.py  app.py  screens.py  styles.tcss  themes.py
tests/: test_config.py  test_nmap_parsing.py  test_themes.py  test_value_objects.py
