[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portscout"
version = "0.1.0"
description = "A friendly, graphical terminal UI for nmap, built with a clean hexagonal architecture."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Portscout contributors" }]
keywords = ["nmap", "tui", "textual", "security", "network", "port-scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]
dependencies = ["textual>=0.60"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.9", "textual-dev>=1.5"]

[project.urls]
Homepage = "https://github.com/your-org/portscout"
Repository = "https://github.com/your-org/portscout"
Issues = "https://github.com/your-org/portscout/issues"

[project.scripts]
portscout = "portscout.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/portscout"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["portscout"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
